Fixed z-index position.

--- a/src/components/layouts/Search/Search.scss
+++ b/src/components/layouts/Search/Search.scss
@@ -9,11 +9,16 @@
 
     input {
         position: relative;
-        z-index: 0;
+        z-index: 1;
 
         height: 38px;
 
         text-indent: 16px;
+    }
+
+    button {
+        position: relative;
+        z-index: 1;
     }
 
     #input-inside {
